--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "backend_coderhouse",
+  "name": "desafio SQL",
   "version": "1.0.0",
-  "description": "proyecto backend - Coderhouse",
+  "description": "Desafio SQL - Coderhouse",
   "main": "app.js",
   "scripts": {
+    "create": "node loadDB.js",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,10 +24,13 @@
   "homepage": "https://github.com/angelh200/backend-coderhouse#readme",
   "dependencies": {
     "express": "~4.18.1",
-    "express-handlebars": "^6.0.6",
-    "socket.io": "^4.5.1"
+    "express-handlebars": "~6.0.6",
+    "knex": "~2.1.0",
+    "mysql": "~2.18.1",
+    "socket.io": "~4.5.1",
+    "sqlite3": "~5.0.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "~2.0.16"
   }
 }
